# 3_course_Coursework

./: .gitignore  README.md  pyproject.toml  requirements.txt
class_payment/: payment.py
classes/: payment.py
constants/: constants.py
programs/: main.py
scr/: constants.py  main.py  payment.py  utils.py
tests/: my_little_tests.py  test_main.py  test_paiment.py  test_utils.py
